# codesteward-session-summarizer

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
migrations/: 001_session_summaries.sql  002_session_chunk_extractions.sql  003_prompt_registry.sql  004_prompt_provenance.sql  005_evaluation_contexts.sql  008_session_summaries.sql  009_session_chunk_extractions.sql  Dockerfile
src/summarizer/: clickhouse.py  config.py  context_builder.py  hashing.py  llm.py  main.py  models.py  token_budget.py
tests/: test_clickhouse.py  test_context_builder.py  test_hashing.py  test_llm.py  test_main.py  test_token_budget.py
